# wizard-kitchen

./: .editorconfig  .gitignore  MANIFEST.in  README.md  flake.nix  manage.py  pyproject.toml  setup.cfg
cookpot/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
cookpot/ingredients/: apps.py  models.py  views.py
cookpot/ingredients/management/commands/: sync.py  syncingredients.py
cookpot/ingredients/migrations/: 0001_initial.py  0002_alter_ingredientmolecule_molecule.py  0003_auto_20220525_1343.py  0004_auto_20220525_1355.py  0005_auto_20220525_1516.py  0006_auto_20220525_1544.py  0007_auto_20220525_1557.py  0008_rename_ingredientmolecule_moleculeoccurrence.py  0009_auto_20220528_1054.py  0010_enable_trigram.py  0010_enable_unaccent.py
cookpot/static/: main.css  main.scss
cookpot/templates/: base.html  index.html  pairing_results.html  pairing_view.html
cookpot/templates/data/: empty_search_results.html  pairing_results.html  section_cards.html
nix/python-packages/: cookpot.nix  django-stubs-ext.nix  django-stubs.nix  types-pyyaml.nix
