[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "stubs"
files = ["cookpot/**/*.py", "tests/**/*.py"]

strict_equality = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_decorators = true

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "cookpot.settings"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "((tests|cookpot)/.*/migrations/.*\\.py)"

[tool.isort]
profile = "black"
skip_glob = ["cookpot/**/migrations/*.py"]
